--- a/netlify.toml
+++ b/netlify.toml
@@ -1,9 +1,9 @@
 [build]
-  publish = "dist"
-  command = "npm run build"
+  publish = "dist/public"
+  command = "npx vite build"
 
 [build.environment]
-  NODE_VERSION = "18.20.0"
+  NODE_VERSION = "20"
 
 [[redirects]]
   from = "/*"
