--- a/netlify.toml
+++ b/netlify.toml
@@ -1,9 +1,9 @@
 [build]
   publish = "dist/public" 
-  command = "npm ci && npx vite build --config vite.config.prod.js"
+  command = "npm ci && VITE_NODE_ENV=production npx vite build"
 
 [build.environment]
-  NODE_VERSION = "20.11.0"
+  NODE_VERSION = "18"
 
 [[redirects]]
   from = "/*"
