--- a/netlify.toml
+++ b/netlify.toml
@@ -1,9 +1,9 @@
 [build]
   publish = "dist/public" 
-  command = "npm ci && NODE_ENV=production npx vite build"
+  command = "npm ci && npx vite build --config vite.config.prod.js"
 
 [build.environment]
-  NODE_VERSION = "18"
+  NODE_VERSION = "18.19.0"
 
 [[redirects]]
   from = "/*"
