--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
   publish = "dist/public"
-  command = "npm ci && npx vite build --config vite.config.prod.js"
+  command = "npm ci && REPL_ID='' NODE_ENV=production npx vite build"
 
 [build.environment]
   NODE_VERSION = "18"
