--- a/netlify.toml
+++ b/netlify.toml
@@ -1,9 +1,11 @@
 [build]
   publish = "dist/public"
-  command = "npm ci && REPL_ID='' NODE_ENV=production npx vite build"
+  command = "npm ci && REPL_ID= NODE_ENV=production npx vite build"
 
 [build.environment]
   NODE_VERSION = "18"
+  NODE_ENV = "production"
+  REPL_ID = ""
 
 [[redirects]]
   from = "/*"
