--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
   publish = "dist/public"
-  command = "npm ci && NODE_ENV=production npx vite build"
+  command = "npm ci && npx vite build --config vite.netlify.config.js"
 
 [build.environment]
   NODE_VERSION = "18"
