--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
   publish = "dist/public"
-  command = "npm ci && REPL_ID='' NODE_ENV=production npx vite build --mode production && npx esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist"
+  command = "npm ci && NODE_ENV=production npx vite build --config vite.config.production.js && npx esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist"
 
 [build.environment]
   NODE_VERSION = "18"
@@ -10,15 +10,3 @@
   from = "/*"
   to = "/index.html"
   status = 200
-
-[context.production.environment]
-  NODE_ENV = "production"
-  REPL_ID = ""
-
-[context.deploy-preview.environment]
-  NODE_ENV = "production"
-  REPL_ID = ""
-
-[context.branch-deploy.environment]
-  NODE_ENV = "production"
-  REPL_ID = ""
