--- a/netlify.toml
+++ b/netlify.toml
@@ -3,8 +3,9 @@
   command = "npm ci && NODE_ENV=production npx vite build --config vite.config.mjs && npx esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist"
 
 [build.environment]
-  NODE_VERSION = "18"
+  NODE_VERSION = "16"
   NODE_ENV = "production"
+  DISABLE_REPLIT_PLUGINS = "true"
 
 [[redirects]]
   from = "/*"
