--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
   publish = "dist/public"
-  command = "npm ci && DISABLE_REPLIT_PLUGINS=true NODE_ENV=production npx vite build && npx esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist"
+  command = "npm ci && node build-netlify.js"
 
 [build.environment]
   NODE_VERSION = "20.17.0"
